--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.18.1",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
+    "react-number-format": "^5.4.3",
     "react-router-dom": "^6.21.1",
     "swiper": "^11.2.2",
     "tailwind-merge": "^2.2.0",
